syntax = "proto3";

option go_package = "pkg/api/account_service";

package api;


service Account_Service {

  rpc Ping(PingRequest) returns (PingResponse);

  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse){};

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){};

  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){};

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse){};

  rpc CreateBuisness(CreateBuisnessRequest) returns (CreateBuisnessResponse){};
  
  rpc GetBuisness(GetBuisnessRequest) returns (GetBuisnessResponse){};
  
}
message PingRequest {}

message PingResponse {
  string pingMessage = 1;
}

message GetUserProfileResponse{
  string name = 1;

  
  string surname = 2;

  string avatar_url = 3;

  int32 age = 4;

  string country = 5;

}


message GetUserProfileRequest{
  string uuid = 1;
}


message CreateBuisnessRequest{
  string uuid = 1;
  string name = 2;
}

message CreateBuisnessResponse{}

message GetBuisnessRequest{
  string id = 1;

}

message GetBuisnessResponse{
  string name = 1;
}


message CreateUserRequest{

  string id = 1;

  string name = 2;

  string surname = 3;

  string avatar_url = 4;

  int32 age = 5;

  string country = 6;
}

message CreateUserResponse{}

message UpdateUserRequest{

  string uuid = 1;

  string name = 2;

  string surname = 3;

  string avatar_url = 4;

  int32 age = 5;

  string country = 6;
}

message UpdateUserResponse{}


message DeleteUserRequest{
  string id = 1;
}

message DeleteUserResponse{}



